--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -58,6 +58,8 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-2759. Pre-allocate HDFS edit log files after writing version number.
     (atm)
 
+    HDFS-3413. TestFailureToReadEdits timing out. (atm)
+
 Release 2.0.0-alpha - UNRELEASED
 
   INCOMPATIBLE CHANGES
