--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -79,6 +79,8 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3391. Fix InvalidateBlocks to compare blocks including their
     generation stamps. (todd)
 
+    HDFS-3444. hdfs groups command doesn't work with security enabled. (atm)
+
 Release 2.0.0-alpha - UNRELEASED
 
   INCOMPATIBLE CHANGES
