--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -43,6 +43,8 @@ Release 2.0.1-alpha - UNRELEASED
     HADOOP-8408. MR doesn't work with a non-default ViewFS mount table
     and security enabled. (atm via eli)
 
+    HADOOP-8329. Build fails with Java 7. (eli)
+
 Release 2.0.0-alpha - UNRELEASED
 
   INCOMPATIBLE CHANGES
