--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -44,6 +44,9 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3440. More effectively limit stream memory consumption when reading
     corrupt edit logs (Colin Patrick McCabe via todd)
 
+    HDFS-3438. BootstrapStandby should not require a rollEdits on active node
+    (todd)
+
   OPTIMIZATIONS
 
   BUG FIXES
