HDFS-2885. Remove "federation" from the nameservice config options. Contributed by Tsz Wo (Nicholas), SZE
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1340842 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -47,6 +47,9 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3438. BootstrapStandby should not require a rollEdits on active node
     (todd)
 
+    HDFS-2885. Remove "federation" from the nameservice config options.
+    (Tsz Wo (Nicholas) via eli)
+
   OPTIMIZATIONS
 
   BUG FIXES
