--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -21,6 +21,9 @@ Release 2.0.1-alpha - UNRELEASED
     MAPREDUCE-4002. MultiFileWordCount job fails if the input path is not
     from default file system. (Bhallamudi Venkata Siva Kamesh via todd)
 
+    MAPREDUCE-4274 MapOutputBuffer should use native byte order for kvmeta.
+    (todd via bobby)
+
 Release 2.0.0-alpha - UNRELEASED
 
   INCOMPATIBLE CHANGES
