HDFS-3454. Balancer unconditionally logs InterruptedException at INFO level on shutdown if security is enabled. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1341928 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -54,6 +54,9 @@ Release 2.0.1-alpha - UNRELEASED
     ClassCastException check is useless since generic type information is only
     available in compile-time.  (szetszwo)
 
+    HDFS-3454. Balancer unconditionally logs InterruptedException at
+    INFO level on shutdown if security is enabled. (eli)
+
   OPTIMIZATIONS
 
   BUG FIXES
