HDFS-1013. Miscellaneous improvements to HTML markup for web UIs. Contributed by Eugene Koontz.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1342103 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -57,6 +57,9 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3454. Balancer unconditionally logs InterruptedException at
     INFO level on shutdown if security is enabled. (eli)
 
+    HDFS-1013. Miscellaneous improvements to HTML markup for web UIs
+    (Eugene Koontz via todd)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
