svn merge -c 1342514 from trunk. Backports HADOOP-8323 (harsh).
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1342516 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -24,6 +24,8 @@ Release 2.0.1-alpha - UNRELEASED
 
     HADOOP-8403. bump up POMs version to 2.0.1-SNAPSHOT. (tucu)
 
+    HADOOP-8323. Add javadoc and tests for Text.clear() behavior (harsh)
+
   BUG FIXES
 
     HADOOP-8372. NetUtils.normalizeHostName() incorrectly handles hostname
