svn merge -c 1342512 from trunk for HDFS-3368. Missing blocks due to bad DataNodes coming up and down.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1342749 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -116,6 +116,8 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3058. HA: Bring BookKeeperJournalManager up to date with HA changes.
     (Ivan Kelly via umamahesh)
 
+    HDFS-3368. Missing blocks due to bad DataNodes coming up and down. (shv)
+
 Release 2.0.0-alpha - UNRELEASED
 
   INCOMPATIBLE CHANGES
