svn merge -c 1343290. Backport of HADOOP-8358 to branch-2. (harsh)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1343294 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -26,6 +26,8 @@ Release 2.0.1-alpha - UNRELEASED
 
     HADOOP-8323. Add javadoc and tests for Text.clear() behavior (harsh)
 
+    HADOOP-8358. Config-related WARN for dfs.web.ugi can be avoided. (harsh)
+
   BUG FIXES
 
     HADOOP-8372. NetUtils.normalizeHostName() incorrectly handles hostname
