svn merge -c 1343804 from trunk. Backport of MAPREDUCE-3493. (harsh)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1343809 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -36,6 +36,9 @@ Release 2.0.1-alpha - UNRELEASED
     MAPREDUCE-4224. TestFifoScheduler throws 
     org.apache.hadoop.metrics2.MetricsException (Devaraj K via tgraves)
 
+    MAPREDUCE-3493. Add the default mapreduce.shuffle.port property
+    to mapred-default.xml (Madhukara Phatak via harsh)
+
 Release 2.0.0-alpha - UNRELEASED
 
   INCOMPATIBLE CHANGES
