--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -431,6 +431,9 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4152. map task left hanging after AM dies trying to connect to RM
     (Tom Graves via bobby)
 
+    MAPREDUCE-4297. Usersmap file in gridmix should not fail on empty lines
+    (Ravi Prakash via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
