--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -59,6 +59,9 @@ Release 2.0.1-alpha - UNRELEASED
     HADOOP-8452. DN logs backtrace when running under jsvc and /jmx is loaded 
     (Andy Isaacson via bobby)
 
+    HADOOP-8460. Document proper setting of HADOOP_PID_DIR and 
+    HADOOP_SECURE_DN_PID_DIR (bobby)
+
 Release 2.0.0-alpha - UNRELEASED
 
   INCOMPATIBLE CHANGES
