--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -434,6 +434,9 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4297. Usersmap file in gridmix should not fail on empty lines
     (Ravi Prakash via bobby)
 
+    MAPREDUCE-4302. NM goes down if error encountered during log aggregation 
+    (Daryn Sharp via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
