--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -39,6 +39,9 @@ Release 2.0.1-alpha - UNRELEASED
     MAPREDUCE-3493. Add the default mapreduce.shuffle.port property
     to mapred-default.xml (Madhukara Phatak via harsh)
 
+    MAPREDUCE-4307. TeraInputFormat calls FileSystem.getDefaultBlockSize()
+    without a Path - Failure when using ViewFileSystem. (Ahmed Radwan via eli)
+
 Release 2.0.0-alpha - UNRELEASED
 
   INCOMPATIBLE CHANGES
