Updated CHANGES.txt files to reflect the 2.0.0-alpha release
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1346151 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -69,7 +69,7 @@ Release 2.0.1-alpha - UNRELEASED
     HADOOP-8481. update BUILDING.txt to talk about cmake rather than autotools.
     (Colin Patrick McCabe via eli)
 
-Release 2.0.0-alpha - UNRELEASED
+Release 2.0.0-alpha - 05-23-2012
 
   INCOMPATIBLE CHANGES
 
