svn merge -c 1346406. FIXES: MAPREDUCE-4313. TestTokenCache doesn't compile due TokenCache.getDelegationToken compilation error (bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1346409 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -42,6 +42,9 @@ Release 2.0.1-alpha - UNRELEASED
     MAPREDUCE-4307. TeraInputFormat calls FileSystem.getDefaultBlockSize()
     without a Path - Failure when using ViewFileSystem. (Ahmed Radwan via eli)
 
+    MAPREDUCE-4313. TestTokenCache doesn't compile due 
+    TokenCache.getDelegationToken compilation error (bobby)
+
 Release 2.0.0-alpha - 05-23-2012
 
   INCOMPATIBLE CHANGES
