--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -104,6 +104,9 @@ Release 2.0.1-alpha - UNRELEASED
     
     HADOOP-8405. ZKFC tests leak ZK instances. (todd)
 
+    HADOOP-8488. test-patch.sh gives +1 even if the native build
+    fails. (Colin Patrick McCabe via eli)
+
 Release 2.0.0-alpha - 05-23-2012
 
   INCOMPATIBLE CHANGES
