HDFS-3235. MiniDFSClusterManager doesn't correctly support -format option. Contributed by Henry Robinson.
(svn merge -c 1311556 from trunk)


git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1348247 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -173,6 +173,9 @@ Release 2.0.1-alpha - UNRELEASED
 
     HDFS-2914. HA: Standby should not enter safemode when resources are low. (Vinay via atm)
 
+    HDFS-3235. MiniDFSClusterManager doesn't correctly support -format option.
+    (Henry Robinson via atm)
+    
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
     HDFS-2185. HDFS portion of ZK-based FailoverController (todd)
