HDFS-3514. Add missing TestParallelLocalRead. Contributed by Henry Robinson.
(svn merge -c 1348207 from trunk)


git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1348249 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -175,6 +175,8 @@ Release 2.0.1-alpha - UNRELEASED
 
     HDFS-3235. MiniDFSClusterManager doesn't correctly support -format option.
     (Henry Robinson via atm)
+
+    HDFS-3514. Add missing TestParallelLocalRead. (Henry Robinson via atm)
     
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
